[package]
name = "rpcudp-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
futures = "0.3"
log = "0.4"
async-std = "1.12"
paste = "1.0.14"
lazy_static = "1.4.0"
rand = "0.8"

[dev-dependencies]
env_logger = "0.8"
test-log = "0.2"
