[package]
name = "rpcudp-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"

[features]
default = ["async-std"]
async-std = ["dep:async-std"]
tokio = ["dep:tokio"]

[dependencies]
bincode = "1.3.3"
futures = "0.3"
log = "0.4"
async-std = { version = "1.12", optional = true }
tokio = { version = "1.34", optional = true, features = ["rt", "net", "time", "rt-multi-thread"] }
paste = "1.0.14"
lazy_static = "1.4.0"
rand = "0.8"

[dev-dependencies]
env_logger = "0.8"
test-log = "0.2"
